--- a/unbbayes.gui.mebn.ontology.protege/plugins/unbbayes.io.mebn.UbfIO2/plugin.xml
+++ b/unbbayes.gui.mebn.ontology.protege/plugins/unbbayes.io.mebn.UbfIO2/plugin.xml
@@ -4,6 +4,7 @@
 <plugin id="unbbayes.io.mebn.UbfIO2" version="0.0.1">
     <requires>
         <import plugin-id="unbbayes.prs.mebn"/>
+        <import plugin-id="unbbayes.gui.mebn.ontology.protege"/>
     </requires>
     <extension plugin-id="unbbayes.prs.mebn" point-id="MEBNIO" id="UbfIOForPROWLInOWL2">
         <parameter id="class" value="unbbayes.io.mebn.UbfIO2ForPROWLInOWL2" />
