--- a/unbbayes.prs.mln/pom.xml
+++ b/unbbayes.prs.mln/pom.xml
@@ -240,6 +240,32 @@
 			<version>4.10.4</version>
 			<optional>false</optional>
 		</dependency>
+		<!-- The following dependencies are used by Tuffy -->
+		<dependency>
+		    <groupId>org.antlr</groupId>
+		    <artifactId>antlr</artifactId>
+		    <version>3.2</version>
+		</dependency>
+		<dependency>
+		    <groupId>args4j</groupId>
+		    <artifactId>args4j</artifactId>
+		    <version>2.0.12</version>
+		</dependency>
+		<dependency>
+		    <groupId>postgresql</groupId>
+		    <artifactId>postgresql</artifactId>
+		    <version>8.4-701.jdbc4</version>
+		</dependency>
+		<dependency>
+		    <groupId>guess</groupId>
+		    <artifactId>tuffy</artifactId>
+		    <version>0.3</version>
+		</dependency>
+		<dependency>
+		    <groupId>guess</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		    <version>3.0</version>
+		</dependency>
 		</dependencies>
 	<reporting>
 		<plugins>
