--- a/unbbayes.prs.mebn/plugins/unbbayes.prs.mebn/plugin.xml
+++ b/unbbayes.prs.mebn/plugins/unbbayes.prs.mebn/plugin.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" ?>
 <!DOCTYPE plugin PUBLIC "-//JPF//Java Plug-in Manifest 1.0" "http://jpf.sourceforge.net/plugin_1_0.dtd">
 <!-- This is the plugin descriptor for UnBBayes' MEBN module. -->
-<plugin id="unbbayes.prs.mebn" version="1.12.9">
+<plugin id="unbbayes.prs.mebn" version="1.12.10">
     <requires>
-        <import plugin-id="unbbayes.util.extension.core"/>
+        <import plugin-id="unbbayes.util.extension.core" plugin-version="4.11.4"/>
     </requires>
     <runtime>
         <library type="resources" path="icons/" id="icons">
@@ -15,7 +15,7 @@
         </library>
         <!-- It seems that loaders does not work as expected on jar files -->
         <!-- If you change/add the libraries, change/add these library declaration too -->
-        <library id="unbbayes.prs.mebn" path="unbbayes.prs.mebn-1.12.9.jar" type="code" >
+        <library id="unbbayes.prs.mebn" path="unbbayes.prs.mebn-1.12.10.jar" type="code" >
         	<export prefix="*"/>
         </library>
         <library id="iri" path="lib/iri-2.4.jar" type="code">
