--- a/unbbayes.prs.bn.inference.extension.JunctionTreeLPEAlgorithm/pom.xml
+++ b/unbbayes.prs.bn.inference.extension.JunctionTreeLPEAlgorithm/pom.xml
@@ -242,6 +242,13 @@
 				<version>4.11.5</version>
 			</dependency>
 			
+			<!-- This is for reading csv files -->
+			<dependency>
+				<groupId>net.sf.opencsv</groupId>
+				<artifactId>opencsv</artifactId>
+				<version>2.3</version>
+			</dependency>
+			
 			<!-- JUNIT -->
 			<!--
 				JUnit is a simple framework to write repeatable tests. It is an
