--- a/unbbayes.prs.bn.inference.extension.JunctionTreeLPEAlgorithm/.settings/org.eclipse.jdt.core.prefs
+++ b/unbbayes.prs.bn.inference.extension.JunctionTreeLPEAlgorithm/.settings/org.eclipse.jdt.core.prefs
@@ -1,6 +1,9 @@
-#Thu Jan 12 15:02:25 BOT 2012
+#Tue Sep 18 16:00:23 BOT 2012
 eclipse.preferences.version=1
-org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
-org.eclipse.jdt.core.compiler.compliance=1.5
+org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
+org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
+org.eclipse.jdt.core.compiler.compliance=1.6
+org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
+org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
 org.eclipse.jdt.core.compiler.problem.forbiddenReference=warning
-org.eclipse.jdt.core.compiler.source=1.5
+org.eclipse.jdt.core.compiler.source=1.6
