MySQL Database support. MDA study case is added.

--- a/unbbayes.prs.prm.ru/pom.xml
+++ b/unbbayes.prs.prm.ru/pom.xml
@@ -51,5 +51,10 @@
 			<artifactId>jgraphx</artifactId>
 			<version>1</version>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.21</version>
+		</dependency>
 	</dependencies>
 </project>
