Removing explicit calls to System.gc and fixed a bug which was not updating the current OWL reasoner because the default OWL reasoner in Protege seems to change only after we wait it to initialize. Currently, UnBBayes is polling for reasoner initialization. Also changed IO not to initialize all loaded reasoners, because it takes too much time when more than 1 DL reasoner is present. Also, omitted the Protege 1 in OWL 2 feature, because it is non-standard.

--- a/unbbayes.gui.mebn.ontology.protege/plugins/unbbayes.gui.mebn.ontology.protege/plugin.xml
+++ b/unbbayes.gui.mebn.ontology.protege/plugins/unbbayes.gui.mebn.ontology.protege/plugin.xml
@@ -124,11 +124,13 @@
     </extension>
     
     <!-- DL reasoner for PR-OWL1 in OWL2 -->
+    <!-- Ignore this reasoner because it is not a standard
     <extension plugin-id="unbbayes.prs.mebn" point-id="KnowledgeBase" id="Protege41Reasoners4PROWL1">
         <parameter id="class" value="unbbayes.prs.mebn.kb.extension.ontology.protege.OWL2KnowledgeBaseBuilder"/>
         <parameter id="name" value="Protégé reasoners (for PR-OWL1 in OWL2)"/>
         <parameter id="optionPanel" value="unbbayes.gui.mebn.extension.kb.protege.OWL2KnowledgeBaseOptionPanelBuilder"/>
     </extension>
+     -->
     
     <!-- DL reasoner for PR-OWL2 in OWL2 -->
     <extension plugin-id="unbbayes.prs.mebn" point-id="KnowledgeBase" id="Protege41Reasoners4PROWL2">
