--- a/unbbayes.gui.mebn.ontology.protege/plugins/unbbayes.io.mebn.UbfIO2/plugin.xml
+++ b/unbbayes.gui.mebn.ontology.protege/plugins/unbbayes.io.mebn.UbfIO2/plugin.xml
@@ -7,10 +7,12 @@
         <import plugin-id="unbbayes.io.mebn.UbfIO"/>
         <import plugin-id="unbbayes.gui.mebn.ontology.protege"/>
     </requires>
+     <!-- Ignore this reasoner because it is not a standard
     <extension plugin-id="unbbayes.prs.mebn" point-id="MEBNIO" id="UbfIOForPROWLInOWL2">
         <parameter id="class" value="unbbayes.io.mebn.UbfIO2ForPROWLInOWL2" />
         <parameter id="name" value="UnBBayes File with PR-OWL 1 in OWL2" />
     </extension>
+    -->
     <extension plugin-id="unbbayes.prs.mebn" point-id="MEBNIO" id="UbfIO2">
         <parameter id="class" value="unbbayes.io.mebn.UbfIO2" />
         <parameter id="name" value="UnBBayes File with PR-OWL 2.0" />
