4/4 unit tests for prm plugin  are working

--- a/unbbayes.prs.prm.ru/pom.xml
+++ b/unbbayes.prs.prm.ru/pom.xml
@@ -50,6 +50,7 @@
 			<groupId>jgraphx</groupId>
 			<artifactId>jgraphx</artifactId>
 			<version>1</version>
+<!-- 			<systemPath>${basedir}/lib/jgraphx.jar</systemPath> -->
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
