jgraphx has been added as a system scope in pom.xml

--- a/unbbayes.prs.prm.ru/pom.xml
+++ b/unbbayes.prs.prm.ru/pom.xml
@@ -50,8 +50,10 @@
 			<groupId>jgraphx</groupId>
 			<artifactId>jgraphx</artifactId>
 			<version>1</version>
-<!-- 			<systemPath>${basedir}/lib/jgraphx.jar</systemPath> -->
+				<scope>system</scope>
+ 			<systemPath>${basedir}/lib/jgraphx/jgraphx.jar</systemPath> 
 		</dependency>
+		
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
