Realized that jpf is now in maven repository, so removed it from "guess" and removed the manual install instruction from readme file.

--- a/UnBBayes/pom.xml
+++ b/UnBBayes/pom.xml
@@ -542,7 +542,7 @@
 				available plug-ins and the functions they provide (via extension
 				points and extensions). http://jpf.sourceforge.net/index.html
 			-->
-			<groupId>guess</groupId>
+			<groupId>net.sf.jpf</groupId>
 			<artifactId>jpf</artifactId>
 			<version>1.5</version>
 		</dependency>
