--- a/unbbayes.prs.msbn/pom.xml
+++ b/unbbayes.prs.msbn/pom.xml
@@ -239,7 +239,10 @@
 			<dependency>
 				<groupId>br.unb.cic</groupId>
 				<artifactId>unbbayes</artifactId>
+				<version>4.14.7</version>
+				<!-- 
 				<version>4.0.0</version>
+				 -->
 			</dependency>
 			
 	</dependencies>
