--- a/unbbayes.pomc/pomcPlugin/plugins/unbbayes.umpst/plugin.xml
+++ b/unbbayes.pomc/pomcPlugin/plugins/unbbayes.umpst/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" ?>
 <!DOCTYPE plugin PUBLIC "-//JPF//Java Plug-in Manifest 1.0" "http://jpf.sourceforge.net/plugin_1_0.dtd">
 <!-- This is the plugin descriptor for UnBBayes' MEBN module. -->
-<plugin id="unbbayes.umpst" version="1.0.0">
+<plugin id="unbbayes.model.umpst" version="1.0.0">
     <requires>
         <import plugin-id="unbbayes.util.extension.core"/>
     </requires>
@@ -11,7 +11,7 @@
         </library>
         <!-- It seems that loaders does not work as expected on jar files -->
         <!-- If you change/add the libraries, change/add these library declaration too -->
-        <library id="unbbayes.umpst" path="unbbayes.umpst-1.0.0.jar" type="code" >
+        <library id="unbbayes.model.umpst" path="unbbayes.model.umpst-1.0.0.jar" type="code" >
         	<export prefix="*"/>
         </library>
     </runtime>
