--- a/edu.gmu.scicast.mebn.questionGenerator/plugins/unbbayes.prs.mebn/plugin.xml
+++ b/edu.gmu.scicast.mebn.questionGenerator/plugins/unbbayes.prs.mebn/plugin.xml
@@ -80,15 +80,15 @@
     <!-- Situation Specific Bayesian Network generation extension point. 
      	 Hot plug is enabled.
     	 This extension point is basically a set of different classes implementing
-    	 unbbayes.prs.mebn.ssbn.extension.ISSBNGeneratorBuilder, in order to add new SSBN
+    	 unbbayes.prs.mebn.ssbn.ISSBNGeneratorBuilder, in order to add new SSBN
     	 Generation algorithms into this MEBN.
     	 module. The class must contain a public default constructor (no parameters).
     	 	Parameters:
-    	 		class: this is a class implementing unbbayes.prs.mebn.ssbn.extension.ISSBNGeneratorBuilder. 
+    	 		class: this is a class implementing unbbayes.prs.mebn.ssbn.ISSBNGeneratorBuilder. 
     	 		       It MUST provide a default constructor with no parameters.
     	 	    name: this is basically a name to identify a particular SSBN generation algorithm.
     	 	    optionPanel : this is a panel to be used as a form to fill attributes for this SSBN Algorithm.
-    	 	           It MUST implement unbbayes.gui.mebn.extension.ssbn.ISSBNOptionPanelBuilder.
+    	 	           It MUST implement unbbayes.prs.mebn.ssbn.ISSBNOptionPanelBuilder.
     	 	           It MUST provide a default constructor with no parameters.
     -->
     <extension-point id="SSBN">
