--- a/edu.gmu.scicast.mebn.questionGenerator/plugins/edu.gmu.scicast.mebn.questionGenerator/plugin.xml
+++ b/edu.gmu.scicast.mebn.questionGenerator/plugins/edu.gmu.scicast.mebn.questionGenerator/plugin.xml
@@ -35,5 +35,12 @@
         <parameter id="name" value="SciCast question generator"/>
     </extension>
     
+    <!-- Panel to consider/disconsider individuals present -->
+    <extension plugin-id="unbbayes.prs.mebn" point-id="MEBNEditorPanel" id="TuuyiIndividualMapper">
+        <parameter id="class" value="edu.gmu.scicast.mebn.gui.TuuyiIndividualMapperPanelBuilder" />
+        <parameter id="name" value="Tuuyi" />
+<!--         <parameter id="icon" value="properties2node.png" /> -->
+        <parameter id="description" value="Map Tuuyi individuals" />
+    </extension>
     
 </plugin>
