Implemented a feature to allow non-bayesian update in order to take 0% probabilities out from 0%.

--- a/unbbayes.prs.bn.inference.extension.JunctionTreeLPEAlgorithm/pom.xml
+++ b/unbbayes.prs.bn.inference.extension.JunctionTreeLPEAlgorithm/pom.xml
@@ -249,6 +249,13 @@
 				<version>2.3</version>
 			</dependency>
 			
+			<!-- This is for Base64 encoding -->
+			<dependency>
+				<groupId>javax.mail</groupId>
+				<artifactId>javax.mail-api</artifactId>
+				<version>1.4.7</version>
+			</dependency>
+			
 			<!-- JUNIT -->
 			<!--
 				JUnit is a simple framework to write repeatable tests. It is an
