Implemented 3 additional modes for exporting current state of bayes net: zip and encode to base64 before exporting network in NET format; save NET format to local disk; and zip and save NET format to locak disk. Modes can be switched by combining 2 flags.

--- a/unbbayes.prs.bn.inference.extension.JunctionTreeLPEAlgorithm/pom.xml
+++ b/unbbayes.prs.bn.inference.extension.JunctionTreeLPEAlgorithm/pom.xml
@@ -249,11 +249,18 @@
 				<version>2.3</version>
 			</dependency>
 			
-			<!-- This is for Base64 encoding -->
+			<!-- This is for Base64 encoding using javax -->
+<!-- 			<dependency> -->
+<!-- 				<groupId>javax.mail</groupId> -->
+<!-- 				<artifactId>javax.mail-api</artifactId> -->
+<!-- 				<version>1.4.7</version> -->
+<!-- 			</dependency> -->
+
+			<!-- This is for Base 64 encoding using apache commons -->
 			<dependency>
-				<groupId>javax.mail</groupId>
-				<artifactId>javax.mail-api</artifactId>
-				<version>1.4.7</version>
+				<groupId>commons-codec</groupId>
+				<artifactId>commons-codec</artifactId>
+				<version>1.9</version>
 			</dependency>
 			
 			<!-- JUNIT -->
