--- a/MarkovEngine/pom.xml
+++ b/MarkovEngine/pom.xml
@@ -6,7 +6,7 @@
 	<name>Markov Engine for Combo Trades in Combinatorial Prediction Market</name>
 	<!-- If you change the below version, -->
 	<!-- change version and library settings on plugin.xml too, because this is included as library -->
-	<version>1.1.8</version>
+	<version>1.4.10</version>
 	<url>http://unbbayes.sourceforge.net
 	</url>
 	<licenses>
@@ -239,15 +239,29 @@
 			<dependency>
 				<groupId>br.unb.cic</groupId>
 				<artifactId>unbbayes</artifactId>
-				<version>4.18.10</version>
+				<version>4.20.11</version>
 			</dependency>
 			
 			<!-- This also depends on MPE/LPE and value tree algorithms -->
 			<dependency>
 				<groupId>edu.gmu</groupId>
 				<artifactId>unbbayes.prs.bn.inference.extension.JunctionTreeLPEAlgorithm</artifactId>
+				<version>1.2.0</version>
+			</dependency>
+			
+			<!-- This is for dynamic JT compilation algorithm -->
+			<dependency>
+				<groupId>edu.gmu</groupId>
+				<artifactId>unbbayes.prs.bn.incrementalJT</artifactId>
 				<version>1.0.0</version>
 			</dependency>
+			
+			<!-- This is for loopy belief propagation in clusters -->
+<!-- 			<dependency> -->
+<!-- 				<groupId>edu.gmu</groupId> -->
+<!-- 				<artifactId>unbbayes.prs.bn.loopyJT</artifactId> -->
+<!-- 				<version>1.0.0</version> -->
+<!-- 			</dependency> -->
 			
 			<!-- This is for reading csv files -->
 			<dependency>
