Changing project name because it was written Gibbs instead of NoisyMax

--- a/unbbayes.prs.bn.inference.extension.NoisyMax/.project
+++ b/unbbayes.prs.bn.inference.extension.NoisyMax/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MEBN_Gibbs</name>
+	<name>Noisy_Max</name>
 	<comment></comment>
 	<projects>
 	</projects>
