--- a/UnBBayes/pom.xml
+++ b/UnBBayes/pom.xml
@@ -333,17 +333,21 @@
 			<version>2.0.02</version>
 		</dependency>
 		<!-- JAVAHELP -->
-
+		
 		<!-- PLOT-GRAPHICS -->
 		<!-- Used for plotting some graphics. -->
 		<!-- This is unbbayes.datamining plugin's dependency
+		-->
 		<dependency>
 			<groupId>guess</groupId>
 			<artifactId>plot</artifactId>
 			<version>1.0</version>
 		</dependency>
-		-->
-		<!-- PLOT-GRAPHICS -->
+		
+		<!-- CLONE -->
+		<!-- Used for Clonning nodes. -->
+		<!-- This is unbbayes.datamining plugin's dependency -->
+
 
 		<!-- JUNIT -->
 		<dependency>
