Treatment of recursion in Bayes-Ball Algorithm; Transform new algorithm in a plug-in of UnBBayes; Others fixes/refactories in the algorithm.

--- a/unbbayes.prs.mebn/plugins/unbbayes.prs.mebn/plugin.xml
+++ b/unbbayes.prs.mebn/plugins/unbbayes.prs.mebn/plugin.xml
@@ -200,4 +200,9 @@
 		<parameter id="icon" value="new-mebn.png" />
 		<parameter id="category" value="bn" />
     </extension>
+    
+   <extension plugin-id="unbbayes.prs.mebn" point-id="SSBN" id="BayesBall">
+        <parameter id="class" value="unbbayes.prs.mebn.ssbn.bayesballalgorithm.BayesBallSSBNGeneratorBuilder" />
+        <parameter id="name" value="Bayes-Ball" />
+    </extension>
 </plugin>
