--- a/unbbayes.learning.incrementalLearning/.settings/org.eclipse.jdt.core.prefs
+++ b/unbbayes.learning.incrementalLearning/.settings/org.eclipse.jdt.core.prefs
@@ -1,4 +1,3 @@
-#Fri Feb 26 18:51:26 GMT-03:00 2010
 eclipse.preferences.version=1
 org.eclipse.jdt.core.builder.cleanOutputFolder=ignore
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
@@ -10,4 +9,5 @@ org.eclipse.jdt.core.compiler.debug.localVariable=generate
 org.eclipse.jdt.core.compiler.debug.sourceFile=generate
 org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
 org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
+org.eclipse.jdt.core.compiler.problem.forbiddenReference=warning
 org.eclipse.jdt.core.compiler.source=1.5
