--- a/unbbayes.prs.mebn.softprwol/.project
+++ b/unbbayes.prs.mebn.softprwol/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SoftPrOWL</name>
+	<name>PrOWL2RL</name>
 	<comment></comment>
 	<projects>
 	</projects>
