--- a/unbbayes.prs.mebn.softprwol/plugins/unbbayes.prs.mebn.softprowl/plugin.xml
+++ b/unbbayes.prs.mebn.softprwol/plugins/unbbayes.prs.mebn.softprowl/plugin.xml
@@ -5,9 +5,8 @@
 <plugin id="unbbayes.prs.mebn.softprowl" version="1.0.0">
     
     <requires>
-        <import plugin-id="unbbayes.util.extension.core" plugin-version="4.11.4" />
-        <import plugin-id="unbbayes.prs.mebn" plugin-version="1.13.10"/>
-        <import plugin-id=""unbbayes.gui.mebn.ontology.protege" plugin-version="1.1.4"/>
+        <import plugin-id="unbbayes.prs.mebn" plugin-version="1.14.13"/>
+        <import plugin-id="unbbayes.gui.mebn.ontology.protege" plugin-version="1.1.4"/>
     </requires>
     
     <runtime>
@@ -32,13 +31,17 @@
         <parameter id="icon" value="properties2node.png" />
         <parameter id="description" value="Convert OWL2 properties to MEBN resident nodes" />
     </extension>
-       
-    <extension plugin-id="unbbayes.prs.mebn" point-id="KnowledgeBase" id="Protege41Reasoners4PROWL2">
-        <parameter id="class" value="unbbayes.prs.mebn.kb.extension.ontology.protege.PROWL2KnowledgeBaseBuilder"/>
-        <parameter id="name" value="Protégé reasoners (for PR-OWL 2)"/>
-        <parameter id="optionPanel" value="unbbayes.gui.mebn.extension.kb.protege.OWL2KnowledgeBaseOptionPanelBuilder"/>
+    -->
+     
+    <extension plugin-id="unbbayes.prs.mebn" point-id="KnowledgeBase" id="TriplestorePROWL2RL">
+        <parameter id="class" value="unbbayes.prs.mebn.kb.extension.triplestore.TriplestoreKnowledgeBaseBuilder"/>
+        <parameter id="name" value="Triplestore Reasoner"/>
+        <parameter id="optionPanel" value="unbbayes.gui.mebn.extension.kb.triplestore.TriplestoreOptionPanelBuilder"/>
     </extension>
-
-     -->
-
+    
+   <extension plugin-id="unbbayes.prs.mebn" point-id="SSBN" id="BayesBall">
+        <parameter id="class" value="unbbayes.prs.mebn.ssbn.bayesballalgorithm.BayesBallSSBNGeneratorBuilder" />
+        <parameter id="name" value="Bayes-Ball" />
+    </extension>    
+  
 </plugin>
