--- a/unbbayes.prs.mebn.softprwol/pom.xml
+++ b/unbbayes.prs.mebn.softprwol/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>SoftPrOWL</groupId>
-  <artifactId>SoftPrOWL</artifactId>
+  <groupId>PrOWL2RL</groupId>
+  <artifactId>PrOWL2RL</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 	<url>http://unbbayes.sourceforge.net
 	</url>
@@ -31,7 +31,7 @@
 		<dependency>
 			<groupId>br.unb.cic</groupId>
 			<artifactId>unbbayes.gui.mebn.ontology.protege</artifactId>
-			<version>1.1.4</version>
+			<version>1.2.5</version>
 		</dependency>		
 		<dependency>
 			<groupId>org.openrdf.sesame</groupId>
@@ -63,5 +63,139 @@
 			<artifactId>sesame-repository-manager</artifactId>
 			<version>2.7.14</version>
 		</dependency>
+		
+			<!-- Protege 4.1 (it handles OWL2) Delete this dependencies...-->
+			 <dependency>
+			    <groupId>guess</groupId>
+			    <artifactId>org.protege.common</artifactId>
+			    <version>4.1</version>
+			</dependency>
+			 <dependency>
+			    <groupId>guess</groupId>
+			    <artifactId>org.protege.editor.core.application</artifactId>
+			    <version>4.1</version>
+			</dependency>
+			
+			<!-- This is themain editor of protege -->
+			<dependency>
+			    <groupId>guess</groupId>
+			    <artifactId>org.protege.editor.owl</artifactId>
+			    <version>4.1.0.b209_2010_09_03_0303</version>
+			</dependency>
+			
+			<!-- org.protege.editor.owl contains the following JARs, but it seems like a bug is impeding UnBBayes to load it (so, lets add explicit dependency) -->
+			<dependency>
+			    <groupId>guess</groupId>
+			    <artifactId>org.protege.owlapi.extensions</artifactId>
+			    <version>1.0.0</version>
+			</dependency>
+			<dependency>
+			    <groupId>guess</groupId>
+			    <artifactId>org.protege.xmlcatalog</artifactId>
+			    <version>1.0.0</version>
+			</dependency>
+			<dependency>
+			    <groupId>com.jgoodies</groupId>
+			    <artifactId>looks</artifactId>
+			    <version>2.2.1</version>
+			</dependency>
+			<dependency>
+			    <groupId>commons-lang</groupId>
+			    <artifactId>commons-lang</artifactId>
+			    <version>2.2</version>
+			</dependency>
+			<dependency>
+			    <groupId>guess</groupId>
+			    <artifactId>org.onemind.jxp</artifactId>
+			    <version>1.2.0</version>
+			</dependency>
+			<dependency>
+			    <groupId>guess</groupId>
+			    <artifactId>org.coode.mdock</artifactId>
+			    <version>1.0.0</version>
+			</dependency>
+			<dependency>
+			    <groupId>guess</groupId>
+			    <artifactId>org.jdesktop.swingworker</artifactId>
+			    <version>1.0.0</version>
+			</dependency>
+			
+			<!-- Protege 4.1 depends on apache felix -->
+			<dependency>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>org.apache.felix.main</artifactId>
+				<version>2.0.4</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>org.apache.felix.bundlerepository</artifactId>
+				<version>1.4.2</version>
+			</dependency>
+			<!-- There is an official equinox repository, but the required version does not match... -->
+			<dependency>
+			    <groupId>guess</groupId>
+			    <artifactId>org.eclipse.equinox.registry</artifactId>
+			    <version>3.4.100.v20090520-1800</version>
+			</dependency>
+			<dependency>
+			    <groupId>guess</groupId>
+			    <artifactId>org.eclipse.equinox.common</artifactId>
+			    <version>3.5.0.v20090520-1800</version>
+			</dependency>
+			 <dependency>
+			    <groupId>guess</groupId>
+			    <artifactId>org.eclipse.equinox.supplement</artifactId>
+			    <version>1.2.0.v20090518</version>
+			</dependency>
+			
+			
+			<!-- Protege 4.1 depends on CO-ODE -->
+			<dependency>
+			    <groupId>guess</groupId>
+			    <artifactId>org.coode.dlquery</artifactId>
+			    <version>1.1.0.2010_09_03_0304</version>
+			</dependency>
+			 
+			<!-- Protege 4.1 depends on HermiT -->
+			<dependency>
+			    <groupId>guess</groupId>
+			    <artifactId>org.semanticweb.HermiT</artifactId>
+			    <version>1.2.5.927</version>
+			</dependency>
+			 
+			<!-- Protege 4.1 depends on OWLAPI -->
+			<dependency>
+			    <groupId>guess</groupId>
+			    <artifactId>org.semanticweb.owl.owlapi</artifactId>
+			    <version>3.1.0.1602</version>
+			</dependency>
+
+			 <!-- Protege's JAXB to correctly parse XML files -->
+			 <dependency>
+			    <groupId>javax.xml.bind</groupId>
+			    <artifactId>jsr173_api</artifactId>
+			    <version>1.0</version>
+			</dependency>
+			<dependency>
+			    <groupId>com.sun.xml.bind</groupId>
+			    <artifactId>jaxb-impl</artifactId>
+			    <version>2.2.1</version>
+			</dependency>
+			<dependency>
+			    <groupId>javax.xml.bind</groupId>
+			    <artifactId>activation</artifactId>
+			    <version>1.0.2</version>
+			</dependency>
+ 			<dependency>
+			    <groupId>javax.xml.bind</groupId>
+			    <artifactId>jaxb-api</artifactId>
+			    <version>2.2.1</version>
+			</dependency>
+			 <!-- Xalan 2.7.1 from UnBBayes is throwing exceptions when protege's catalogs are parsed... -->
+			 <dependency>
+			    <groupId>xalan</groupId>
+			    <artifactId>xalan</artifactId>
+			    <version>2.7.1</version>
+			</dependency>		
   </dependencies>  
 </project>
