--- a/OptimizerUtils/pom.xml
+++ b/OptimizerUtils/pom.xml
@@ -118,6 +118,15 @@
 			    <version>2.0.8</version>
 			</dependency>
 			
+			<!-- Command line parser -->
+			<!-- http://mvnrepository.com/artifact/commons-cli/commons-cli -->
+			<dependency>
+			    <groupId>commons-cli</groupId>
+			    <artifactId>commons-cli</artifactId>
+			    <version>1.3.1</version>
+			</dependency>
+						
+			
 	</dependencies>
 	<reporting>
 		<plugins>
