--- a/OptimizerUtils/pom.xml
+++ b/OptimizerUtils/pom.xml
@@ -4,11 +4,8 @@
 	<groupId>edu.gmu</groupId>
 	<artifactId>unbbayes.util.optimizationUtils</artifactId>
 	<name>Set of utility programs for optimization problems</name>
-	<!-- If you change the below version, -->
-	<!-- change version and library settings on plugin.xml too, because this is included as library -->
-	<version>0.0.1</version>
-	<url>http://unbbayes.sourceforge.net
-	</url>
+	<version>1.0.0</version>
+	<url>http://unbbayes.sourceforge.net</url>
 	<licenses>
 		<license>
 			<name> GNU General Public License, Version 3, 29 June 2007</name>
@@ -17,11 +14,6 @@
 			<distribution>manual</distribution>
 		</license>
 	</licenses>
-	<issueManagement>
-		<system>SourceForge Tracker</system>
-		<url>http://sourceforge.net/tracker/?group_id=47519
-		</url>
-	</issueManagement>
 	<inceptionYear>2016</inceptionYear>
 	<developers>
 		<developer>
@@ -80,15 +72,14 @@
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
-					<descriptors>
-						<descriptor>dist.xml</descriptor>
-					</descriptors>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-site-plugin</artifactId>
-				<configuration>
-					<locales>en</locales>
+					<descriptorRefs>
+			           <descriptorRef>jar-with-dependencies</descriptorRef>
+			        </descriptorRefs>
+					<archive>
+			            <manifest>
+			              <mainClass>utils.JavaSimulatorWrapper</mainClass>
+			            </manifest>
+			        </archive>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -133,70 +124,6 @@
 			    <artifactId>commons-math3</artifactId>
 			    <version>3.6.1</version>
 			</dependency>
-						
 			
 	</dependencies>
-	<reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId> maven-project-info-reports-plugin</artifactId>
-				<reportSets>
-					<reportSet>
-						<reports>
-							<!-- report>dependencies</report -->
-							<report>project-team</report>
-							<report>mailing-list</report>
-							<report>issue-tracking</report>
-							<report>license</report>
-							<report>scm</report>
-						</reports>
-					</reportSet>
-				</reportSets>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-changes-plugin</artifactId>
-				<inherited>false</inherited>
-				<reportSets>
-					<reportSet>
-						<reports>
-							<report>changes-report</report>
-						</reports>
-					</reportSet>
-				</reportSets>
-				<configuration>
-					<issueLinkTemplate>http://sourceforge.net/support/tracker.php?aid=%ISSUE%</issueLinkTemplate>
-  				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>changes-maven-plugin</artifactId>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jxr-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<configuration>
-					<links>
-						<link>
-							http://java.sun.com/j2se/1.5.0/docs/api
-						</link>
-					</links>
-					<aggregate>true</aggregate>
-				</configuration>
-			</plugin>
-		</plugins>
-	</reporting>
-	<distributionManagement>
-		<site>
-  		 	<id>sourceforge.net</id>
-   			<url>scp://shell.sourceforge.net/home/groups/u/un/unbbayes/htdocs</url>
-  		</site>
-	</distributionManagement>
 </project>
