Changed pom configuration so that the name of the final jar is JavaSimulatorWrapper.jar.

--- a/OptimizerUtils/pom.xml
+++ b/OptimizerUtils/pom.xml
@@ -80,6 +80,8 @@
 			              <mainClass>utils.JavaSimulatorWrapper</mainClass>
 			            </manifest>
 			        </archive>
+			        <finalName>JavaSimulatorWrapper</finalName>
+  					<appendAssemblyId>false</appendAssemblyId>
 				</configuration>
 			</plugin>
 		</plugins>
