--- a/unbbayes.prs.mebn.softprwol/pom.xml
+++ b/unbbayes.prs.mebn.softprwol/pom.xml
@@ -100,6 +100,11 @@
 			<artifactId>sesame-repository-manager</artifactId>
 			<version>2.7.14</version>
 		</dependency>
+		<dependency>
+			<groupId>org.openrdf.sesame</groupId>
+			<artifactId>sesame-console</artifactId>
+			<version>2.7.1</version>
+		</dependency>			
 
 		<!-- Protege 4.1 (it handles OWL2) Delete this dependencies... -->
 		<dependency>
